src/test/ui/nll/user-annotations/constant-in-expr-trait-item-3.nll.stderr
error: lifetime may not live long enough
  --> $DIR/constant-in-expr-trait-item-3.rs:10:5
   |
LL | fn foo<'a, T: Foo<'a>>() -> &'static u32 {
   |        -- lifetime `'a` defined here
LL |     T::C
   |     ^^^^ returning this value requires that `'a` must outlive `'static`

error: aborting due to previous error

